@startuml command-pattern-class-diagram-fr
title Le patron Command dans PlatformerMCR — enregistrer une fois, rejouer sur les clones

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontName sans-serif
skinparam packageStyle rectangle
hide empty members

package "Invocateurs (deux)" {
    class PlayerCommandInvoker <<Invocateur — direct>> {
        -lastMove : Vector2
        -lastJumpHeld : bool
        +Timeline : CommandTimeline
        +Tick(tick : int, dt : float)
    }
    class ClonePlayback <<Invocateur — rejeu>> {
        +Play(recording : CommandTimeline)
        +Tick(tick : int, dt : float)
    }
}

package "Enregistrement (historique)" {
    class CommandTimeline {
        -frames : List<TickRecord>
        -recordingEndTick : int
        +Record(tick : int, changed : List<ICommand>)
        +GetAtTick(tick : int) : TickRecord
        +SliceFromTick(fromTick : int) : CommandTimeline
        +TruncateAfterTick(tick : int)
    }
    class TickRecord {
        +Tick : int
        +Commands : List<ICommand>
    }
}

package "Commands (l'intention sous forme d'objets)" {
    interface ICommand <<Command>> {
        +Execute(target : Player)
    }
    interface IStickyCommand <<marqueur>>

    class MoveCommand {
        -direction : Vector2
    }
    class JumpHeldCommand {
        -held : bool
    }
    class JumpCommand
    class UseCommand
}

package "Récepteurs" {
    class Player <<Récepteur (façade)>> {
        +Move(direction : Vector2)
        +Jump()
        +SetJumpHeld(held : bool)
        +Use()
    }
    class PlayerController {
        +SetDirection(d : Vector2)
        +RequestJump()
        +SetJumpHeld(held : bool)
        +Tick(tick : int, dt : float)
    }
    class InteractionDetector {
        +GetClosest() : IInteractable
    }
}

class RewindDirector
class GameClock {
    +Tick : int
}

' ── hiérarchie des commandes ──
ICommand <|-- IStickyCommand
IStickyCommand <|.. MoveCommand
IStickyCommand <|.. JumpHeldCommand
ICommand <|.. JumpCommand
ICommand <|.. UseCommand

' ── enregistrement ──
CommandTimeline *-down-> "0..*" TickRecord : ticks de\nchangement seuls
TickRecord o-down-> "1..*" ICommand

' ── deux invocateurs, un seul enregistrement ──
PlayerCommandInvoker *-right-> CommandTimeline : Record(tick, changed)
ClonePlayback -right-> CommandTimeline : GetAtTick(tick)
PlayerCommandInvoker .down.> ICommand : « crée » depuis les\nchangements d'input
ClonePlayback .down.> ICommand : ré-exécute\nsur le clone

' ── les commandes agissent sur le récepteur passé à Execute ──
ICommand .down.> Player : Execute(target)
Player -down-> PlayerController : Move / Jump /\nSetJumpHeld
Player -down-> InteractionDetector : Use → GetClosest()\n.Interact()

' ── orchestration ──
GameClock -down-> PlayerCommandInvoker : Tick(t, dt)
GameClock -down-> ClonePlayback : Tick(t, dt)
RewindDirector .down.> CommandTimeline : SliceFromTick(T) /\nTruncateAfterTick(T-1)
RewindDirector .down.> ClonePlayback : instancie l'écho,\nPlay(tranche)

note as N1
    **L'adaptation clé :** le récepteur est passé
    à Execute, **pas stocké dans la commande**
    → la même instance enregistrée pilote le
    joueur en direct, puis un clone.
end note
N1 .. ICommand

note as N2
    Sticky = l'effet persiste jusqu'au changement
    → journalisé uniquement au changement (journal creux) ;
    une tranche ré-établit l'état sticky à son départ.
end note
N2 .. IStickyCommand

@enduml
